--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.icddrb.standard">
+    package="org.icddrb.enap">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
@@ -25,7 +25,7 @@
         android:supportsRtl="true"
         android:theme="@style/CustomTheme">
         <activity
-            android:name=".LoginActivity"
+            android:name="org.icddrb.enap.Login"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,27 +34,36 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SettingForm"
+            android:name="org.icddrb.enap.SettingForm"
             android:label="Device Setting" />
         <activity
-            android:name=".MainMenu"
+            android:name="org.icddrb.enap.MainMenu"
             android:label="Main Menu" />
         <activity
             android:name="navigationDrawer.NavigationActivity"
             android:label="Nav" />
         <activity
-            android:name=".SettingFormNew"
+            android:name="org.icddrb.enap.SettingFormNew"
             android:label="Device Settings" />
 
+        <activity
+            android:name="org.icddrb.enap.Observation"
+            android:label="Device Settings" />
         //Android Manifest Code
         <!-- <activity android:name="org.icddrb.data.Screening" android:label="Screening" /> -->
 
         //Service
-        <service android:name=".DataSyncService" />
+        <service android:name=".Sync_Service" />
 
         <activity
-            android:name=".MainActivity"
+            android:name="org.icddrb.enap.MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/CustomTheme"></activity>
+        <activity android:name=".Registration" />
+        <activity android:name=".rv_MainActivity" />
+        <activity android:name=".PatientList" />
+        <activity android:name=".Observation_Time" />
+        <activity android:name=".MainActivity1" />
+        <activity android:name=".LD_Outcome" />
     </application>
 </manifest>
