--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,5 +65,6 @@
         <activity android:name=".Observation_Time" />
         <activity android:name=".MainActivity1" />
         <activity android:name=".LD_Outcome" />
+        <activity android:name=".RecallSurvS1" />
     </application>
 </manifest>
